# Axen_EASYAXDOTHACK

./: .gitignore  Cargo.toml  README.md
.github/workflows/: checks-quick.yml  release-reusable-promote-to-final.yml  release-reusable-s3-upload.yml
bot/: index.js  price.js  testContract.js  testWeb3.js  web3.js
bot/config/: config.js
templates/solochain/pallets/mypallet/: Cargo.toml
templates/solochain/pallets/mypallet/src/: lib.rs  mock.rs  tests.rs  weights.rs
templates/solochain/runtime/: Cargo.toml
templates/solochain/runtime/src/: lib.rs
vault_contract/: truffle-config.js
vault_contract/contracts/: Vault.sol
vault_contract/contracts/abi/: VaultABI.json
vault_contract/migrations/: 2_deploy_contract.js
vault_contract/scripts/: deploy.js
webapp/: deposit.html  main.js  styles.css  withdraw.html
