[package]
name = "mypallet"
description = "A minimal custom FRAME pallet."
version = "0.0.1"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { version = "3.6.5", features = ["derive"], default-features = false }
scale-info = { version = "2.11.6", features = ["derive"], workspace = true }

# FRAME dependencies
frame-benchmarking = { optional = true, workspace = true }
frame-support = { version = "5.0.0", workspace = true }
frame-system = { version = "5.0.0", workspace = true }

sp-runtime = { version = "5.0.0", workspace = true, default-features = true }

[dev-dependencies]
sp-core = { version = "5.0.0", workspace = true, default-features = true }
sp-io = { version = "5.0.0", workspace = true, default-features = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "sp-runtime/try-runtime",
]
